--- a/views/partials/_navbar.jade
+++ b/views/partials/_navbar.jade
@@ -3,7 +3,7 @@ nav.navbar.navbar-inverse.navbar-custom
         .navbar-header
           .navbar-brand
             a(href='/auth')
-              img(src='./images/reaDig-logo.png', style='max-width:80px; margin-top:-27px')    
+              img(src='../../images/reaDig-logo.png', style='max-width:80px; margin-top:-27px')    
         |     
         div
           ul.nav.navbar-nav
@@ -20,7 +20,7 @@ nav.navbar.navbar-inverse.navbar-custom
               a(href='#') friends
             |           
             li
-              a(href='#') recommendations
+              a(href='/reviews') reviews
           |       
           ul.nav.navbar-nav.navbar-right      
             if (!user)
