--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	div.container
+	div.container.index-page
 		div.row
 			div.col-sm-6.col-md-4.col-md-offset-4
 				h1.text-center
