--- a/views/partials/_footer.jade
+++ b/views/partials/_footer.jade
@@ -1,21 +1,22 @@
-.container.text-center.footer
-    .row
-      .col-lg-12
+.wrapper
+  .container.text-center.footer
+      .row
+        .col-lg-12
+            ul.nav.nav-pills.nav-justified
+              li
+                a(href='/about') about us                
+              li
+                a(href='/contact') contact us!                 
+              li
+                a(href='/faqs') FAQs
+              li
+                a(href='/authors') author index
+      .row
+        .col-lg-12
           ul.nav.nav-pills.nav-justified
-            li
-              a(href='/about') about us                
-            li
-              a(href='/contact') contact us!                 
-            li
-              a(href='/faqs') FAQs
-            li
-              a(href='/authors') author index
-    .row
-      .col-lg-12
-        ul.nav.nav-pills.nav-justified
-            li
-              a(href='/terms') terms of service                
-            li
-              a(href='/privacy') privacy notice                 
-            li
-              a(href='/') reaDig &copy; 2015
+              li
+                a(href='/terms') terms of service                
+              li
+                a(href='/privacy') privacy notice                 
+              li
+                a(href='/') reaDig &copy; 2015
