--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,11 +3,11 @@ head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     include ./partials/_navbar.jade
-    link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet', media='screen')
-    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')  
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js', type='text/javascript')
-    script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-    link(href='http://fonts.googleapis.com/css?family=Jura:400,300', rel='stylesheet', type='text/css')
+    link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet', media='screen')
+    link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')  
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js', type='text/javascript')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+    link(href='//fonts.googleapis.com/css?family=Jura:400,300', rel='stylesheet', type='text/css')
     link(href='/stylesheets/bootstrap-social.css', rel='stylesheet')
     link(href='/stylesheets/style.css', rel='stylesheet')
 
