fixed social google icon

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -23,7 +23,7 @@ block content
                   if user.twitter.token
                     a.social-icon.twitter.animate(href='#{user.twitter.url}', class='[ ]')
                       span.fa.fa-twitter
-                  if user.twitter.token
+                  if user.google.token
                     a.social-icon.google-plus.animate(href='#{user.google.url}', class='[ ]')
                       span.fa.fa-google-plus
           .info-overview
