--- a/views/profile.jade
+++ b/views/profile.jade
@@ -34,9 +34,9 @@ block content
                 h4 33
               |                 
               .col-md-4.user-pad.text-center
-                h3 reviews
+                h3(href='/reviews') reviews
                 |                     
-                h4 10
+                h4 #{user.reviews.length}
               |                 
               .col-md-4.user-pad.text-center
                 h3 friends
