adding friends feature

--- a/views/partials/_navbar.jade
+++ b/views/partials/_navbar.jade
@@ -17,7 +17,7 @@ nav.navbar.navbar-inverse.navbar-custom
               a(href='/profile') profile
             |         
             li
-              a(href='#') friends
+              a(href='/friends') friends
             |           
             li
               a(href='/reviews') reviews
