--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,8 @@ head
 
 body
       block content
+      script(src='//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js')
+      script(src='/javascripts/friends.js', type='text/javascript')
       script(src='/javascripts/review-box.js', type='text/javascript')
-      script(src='/javascripts/reviews.js', type='text/javascript')
       .wrapper
         include ./partials/_footer.jade
