--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,7 @@
 doctype html(lang='en')
 head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    meta(name='viewport', content='width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes')
     include ./partials/_navbar.jade
     link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet', media='screen')
     link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')  
@@ -14,8 +13,6 @@ head
 
 body
       block content
-      script(src='//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js')
-      script(src='/javascripts/friends.js', type='text/javascript')
       script(src='/javascripts/review-box.js', type='text/javascript')
       .wrapper
         include ./partials/_footer.jade
