--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -419,6 +419,51 @@ ul.c-controls li a:hover {
 
 /* FRIENDS LIST MODAL */
 
+/*
+ *
+ * derived from login-register modal
+ * Autor: Creative Tim
+ * Web-author: creative.tim
+ * Web script: http://creative-tim.com
+ * 
+ */
+ 
+/*  Shake animation  */
+
+@charset "UTF-8";
+
+.animated {
+  -webkit-animation-duration: 1s;
+       -moz-animation-duration: 1s;
+         -o-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+       -moz-animation-fill-mode: both;
+         -o-animation-fill-mode: both;
+            animation-fill-mode: both;
+}
+
+.animated.hinges {
+    -webkit-animation-duration: 2s;
+       -moz-animation-duration: 2s;
+         -o-animation-duration: 2s;
+            animation-duration: 2s;
+}
+
+.animated.slow {
+    -webkit-animation-duration: 3s;
+       -moz-animation-duration: 3s;
+         -o-animation-duration: 3s;
+            animation-duration: 3s;
+}
+
+.animated.snail {
+    -webkit-animation-duration: 4s;
+       -moz-animation-duration: 4s;
+         -o-animation-duration: 4s;
+            animation-duration: 4s;
+}
+
 @-webkit-keyframes shake {
     0%, 100% {-webkit-transform: translateX(0);}
     10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
