--- a/views/friends.jade
+++ b/views/friends.jade
@@ -78,9 +78,7 @@ block content
               .container-fluid
                 form(class='find-friend', style='text-center', action='/friends', method='POST')
                   .form-group
+                    .error
                     input#friendName(type='text', name='friendName', class='form-control', placeholder='enter their full name', required)
-
-                  #message
-                    if message
-                      h3.text-center.error-message #{message}
+                    br
                     button#findFriend(class='btn btn-md btn-primary btn-block', type='submit') submit
